Fixed bug - Elevator Pitch heading spills outside of the div when viewed on smaller screens

--- a/assets/styles/layout_general.css
+++ b/assets/styles/layout_general.css
@@ -58,11 +58,10 @@
     /* eg. .box .item .border */
 
     div {
-        /* width: 100%;
+        width: 100%;
         text-align: left;
         padding: var(--space-4) var(--space-4) 0 var(--space-4);
-        
-        background: linear-gradient(to right bottom, #B9B9B9, #D9D9D9); */
+        background: linear-gradient(to right bottom, #B9B9B9, #D9D9D9);
     }
 
     span {
