--- a/assets/styles/layout_homepage.css
+++ b/assets/styles/layout_homepage.css
@@ -29,13 +29,13 @@
     /* states the primary purpose of the business */     
     #ElevatorPitch {
         background: rgba(var(--colour-primary-transparent), 0.8);
-        height: var(--height-elevator-pitch);
+        height: auto;
         margin-bottom: var(--space-2);
         display: flex;
         justify-content: center;
         align-items: center;
         text-align: center;
-        padding: 0;
+        padding: 1rem;
         border: none;
 
         & h3{
@@ -107,6 +107,13 @@
 
     /* LARGER DEVICES */
     /* /////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+        /* devices larger than iPhones increase the Elavator Pitch heading size */
+        @media (min-width: 400px){
+            #ElavatorPitch {
+                height: var(--height-elevator-pitch);
+            }
+        }
 
         @media (min-width: 961px){
             
